tests/examples/parse_errors.err
Parse Error in line 4, column 13
	{ x: 4, x: 5},
	            ^
Error: Redefinition of label 'x' in map

Parse Error in line 14, column 27
	{1, "zing zing", 4n  kd ( $ $, "this is": "correct"} = ``,
	                          ^
Error: Missing value

Parse Error in line 15, column 24
	{ "good", second: njd %% & 62 ] , third: "good"} = ``,
	                       ^
Error: Missing value

Parse Error in line 16, column 20
	["this", "next"  ( % ^&, "last"] = ``,
	                   ^
Error: Missing value

Parse Error in line 21, column 20
	    4 * (x: 3) = ``,
	                   ^
Error: Redefinition of label 'x' in map

Parse Error in line 23, column 15
	    y: 12 = ``,
	              ^
Error: Redefinition of label 'y' in map

6 Parse Errors encountered


line 8, column 26 Eval Error: Circular dependency
line 9, column 26 Eval Error: Circular dependency
line 10, column 26 Eval Error: Circular dependency
line 28, column 30 Eval Error: Circular dependency
line 30, column 26 Eval Error: Circular dependency
5 Eval Errors encountered
