tests/examples/parse_errors.af
# Test parsing errors

# Redefinition error
{ x: 4, x: 5},

# Circular dependence error
{
    foo: {x: 5 * bar.y = ``},
    bar: {y: baz.z - 2 = ``},
    baz: {z: 7 / foo.x = ``},
},

# Extra content in map or array
{1, "zing zing", 4n  kd ( $ $, "this is": "correct"} = ``,
{ "good", second: njd %% & 62 ] , third: "good"} = ``,
["this", "next"  ( % ^&, "last"] = ``,

# Redefinition with internal definition
{
    x: 4 = ``,
    4 * (x: 3) = ``,
    (y: 2) * 5 = ``,
    y: 12 = ``,
},

# Circular definition with internal definition
{
    6 - (x: (4 * y.h) - 3) = ``,
    y: {h: (1 - 44 / z)},
    4 * (z: x - 2) - 3 = ``,
},

